# agentlens-sdk

./: .gitignore  CONTRIBUTING.md  GATEWAY_PLAN.md  GLOBAL_AI_GOVERNANCE_COVERAGE.md  README.md  index.html  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  usability_feedback.md
.github/workflows/: ci.yml
agentlens/: __init__.py  audit_log.py  chat_analytics.py  chat_policy.py  chat_tracer.py  compliance_db.py  config.py  live_report.py  otel.py  pii_firewall.py  policy.py  report.py  storage.py  tracer.py
examples/: chat_repl.py  demo_credit_agent.py  demo_fraud_detection.py  demo_live_claude_chat.py  demo_phase0.py
infra/: docker-compose.yml  e2e_test.sh
infra/fluent-bit/: fluent-bit.conf  parsers.conf
infra/keycloak/: realm-export.json
infra/localstack/: bootstrap.sh
infra/otel/: collector-config.yaml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
infra/rabbitmq/: definitions.json  rabbitmq.conf
infra/vault/: config.hcl  init.sh  render-env.sh
tests/: test_audit_log.py  test_phase0.py  test_phase0_integration.py  test_policy.py  test_reporter.py  test_tracer.py
